--- a/Filters/AWAvenue-Ads-Rule-Clash-Classical.yaml
+++ b/Filters/AWAvenue-Ads-Rule-Clash-Classical.yaml
@@ -866,6 +866,7 @@ payload:
   - DOMAIN-SUFFIX,yfanads.com
   - DOMAIN-SUFFIX,zhangyuyidong.cn
   - DOMAIN-KEYWORD,-ad.sm.cn
+  - DOMAIN,usage.hookvip.to
   - DOMAIN-KEYWORD,-ad.video.yximgs.com
   - DOMAIN-KEYWORD,-ad.wtzw.com
   - DOMAIN-KEYWORD,-be-pack-sign.pglstatp-toutiao.com
